--- a/PZ_Projekt/Views/Home/Index.cshtml
+++ b/PZ_Projekt/Views/Home/Index.cshtml
@@ -1,8 +1,28 @@
-﻿@{
+﻿@model List<PZ_Projekt.Models.Product>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Witamy w naszym sklepie internetowym!</h1>
+    <p>Zobacz nasze najnowsze produkty:</p>
+    <div class="row">
+        @foreach (var product in Model)
+        {
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="@product.ImageUrl" alt="@product.Name">
+                    <div class="card-body">
+                        <h5 class="card-title">@product.Name</h5>
+                        <p class="card-text">@product.Description</p>
+                        <p class="card-text">@product.Price.ToString("C")</p>
+                        <a href="@Url.Action("AddToCart", "Cart", new { id = product.Id })" class="btn btn-primary">Dodaj do koszyka</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <a href="../cart" class="btn btn-primary">Przejdź do koszyka</a>
 </div>
+
