--- a/PZ_Projekt/Views/Home/Index.cshtml
+++ b/PZ_Projekt/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<PZ_Projekt.Models.Product>
+﻿@model List<PZ_Projekt.Models.Item>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -8,21 +8,21 @@
     <h1 class="display-4">Witamy w naszym sklepie internetowym!</h1>
     <p>Zobacz nasze najnowsze produkty:</p>
     <div class="row">
-        @foreach (var product in Model)
+        @foreach (var item in Model)
         {
             <div class="col-md-4">
                 <div class="card">
-                    <img class="card-img-top" src="@product.ImageUrl" alt="@product.Name">
+                    <img class="card-img-top" src="@item.ImageUrl" alt="@item.Name">
                     <div class="card-body">
-                        <h5 class="card-title">@product.Name</h5>
-                        <p class="card-text">@product.Description</p>
-                        <p class="card-text">@product.Price.ToString("C")</p>
-                        <a href="@Url.Action("AddToCart", "Cart", new { id = product.Id })" class="btn btn-primary">Dodaj do koszyka</a>
+                        <h5 class="card-title">@item.Name</h5>
+                        <p class="card-text">@item.Description</p>
+                        <p class="card-text">@item.Price.ToString("C")</p>
+                        <a href="@Url.Action("AddToCart", "Cart", new { id = item.Id })" class="btn btn-primary">Dodaj do koszyka</a>
                     </div>
                 </div>
             </div>
         }
     </div>
-    <a href="../cart" class="btn btn-primary">Przejdź do koszyka</a>
+    <a href="@Url.Action("Index", "Item")" class="btn btn-primary">Przejdź do listy wszystkich produktów</a>
+    <a href="@Url.Action("Index", "Cart")" class="btn btn-primary">Przejdź do koszyka</a>
 </div>
-
