--- a/PZ_Projekt/Views/Home/Index.cshtml
+++ b/PZ_Projekt/Views/Home/Index.cshtml
@@ -28,8 +28,8 @@
                     <img class="card-img-top" src="@item.ImageUrl" alt="@item.Name">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
-                        <p class="card-text">@item.Description</p>
                         <p class="card-text">@item.Price.ToString("C")</p>
+                        <a href="@Url.Action("Details", "Item", new { id = item.Id })" class="btn btn-info mt-2">Szczegóły</a>
                         <a href="@Url.Action("AddToCart", "Cart", new { id = item.Id })" class="btn btn-primary">Dodaj do koszyka</a>
                     </div>
                 </div>
