--- a/PZ_Projekt/Views/Item/Delete.cshtml
+++ b/PZ_Projekt/Views/Item/Delete.cshtml
@@ -30,10 +30,10 @@
                 @Html.DisplayFor(model => model.Price)
             </dd>
             <dt class="col-sm-2">
-                <strong>Image URL:</strong>
+                <strong>Image:</strong>
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.ImageUrl)
+                <img src="@Model.ImageUrl" alt="@Model.Name" style="max-width: 200px; max-height: 200px;" />
             </dd>
         </dl>
 
