--- a/PZ_Projekt/Views/Item/Details.cshtml
+++ b/PZ_Projekt/Views/Item/Details.cshtml
@@ -29,13 +29,22 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class="col-sm-2">
-            <strong>Image URL:</strong>
+            <strong>Image:</strong>
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Model.ImageUrl" alt="@Model.Name" style="max-width: 200px; max-height: 200px;" />
         </dd>
     </dl>
 </div>
+
+<!-- Dodaj do koszyka -->
+<div>
+    <form asp-action="AddToCart" asp-controller="Cart" method="post">
+        <input type="hidden" name="id" value="@Model.Id" />
+        <button type="submit" class="btn btn-primary">Dodaj do koszyka</button>
+    </form>
+</div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
