połaczenie projektów, dodanie kategorii do klasy Item i przystosowanie widoków Item

--- a/PZ_Projekt/Views/Item/Details.cshtml
+++ b/PZ_Projekt/Views/Item/Details.cshtml
@@ -29,6 +29,12 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class="col-sm-2">
+            <strong>Category:</strong>
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Category)
+        </dd>
+        <dt class="col-sm-2">
             <strong>Image:</strong>
         </dt>
         <dd class="col-sm-10">
