--- a/PZ_Projekt/Views/Home/Index.cshtml
+++ b/PZ_Projekt/Views/Home/Index.cshtml
@@ -38,4 +38,5 @@
     </div>
     <a href="@Url.Action("Index", "Item")" class="btn btn-primary">Przejdź do listy wszystkich produktów</a>
     <a href="@Url.Action("Index", "Cart")" class="btn btn-primary">Przejdź do koszyka</a>
+    <a href="@Url.Action("Index", "Orders")" class="btn btn-primary">Przejdź do zamówień</a>
 </div>
