--- a/PZ_Projekt/Views/Item/Create.cshtml
+++ b/PZ_Projekt/Views/Item/Create.cshtml
@@ -26,6 +26,18 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <select asp-for="Category" class="form-control">
+                    <option value="GPU">GPU</option>
+                    <option value="CPU">CPU</option>
+                    <option value="RAM">RAM</option>
+                    <option value="zasilacze">zasilacze</option>
+                    <option value="dysk">dysk</option>
+                    <option value="chłodzenie">chłodzenie</option>
+                </select>
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
                 <input asp-for="ImageFile" type="file" class="form-control" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
