--- a/PZ_Projekt/Views/Item/Edit.cshtml
+++ b/PZ_Projekt/Views/Item/Edit.cshtml
@@ -6,8 +6,6 @@
 
 <h1>Edit</h1>
 
-<h4>Edit Item</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" method="post" enctype="multipart/form-data">
@@ -27,6 +25,18 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <select asp-for="Category" class="form-control">
+                    <option value="GPU">GPU</option>
+                    <option value="CPU">CPU</option>
+                    <option value="RAM">RAM</option>
+                    <option value="zasilacze">zasilacze</option>
+                    <option value="dysk">dysk</option>
+                    <option value="chłodzenie">chłodzenie</option>
+                </select>
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
