--- a/PZ_Projekt/Views/Item/Index.cshtml
+++ b/PZ_Projekt/Views/Item/Index.cshtml
@@ -15,6 +15,7 @@
             <th>Nazwa</th>
             <th>Opis</th>
             <th>Cena</th>
+            <th>Kategoria</th>
             <th>Obrazek</th>
             <th>Akcje</th>
         </tr>
@@ -26,6 +27,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                 <td>@Html.DisplayFor(modelItem => item.Description)</td>
                 <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                <td>@Html.DisplayFor(modelItem => item.Category)</td>
                 <td><img src="@item.ImageUrl" alt="@item.Name" style="max-width: 100px; max-height: 100px;" /></td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
