--- a/PZ_Projekt/Views/Shared/_Layout.cshtml
+++ b/PZ_Projekt/Views/Shared/_Layout.cshtml
@@ -25,13 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        @* Dodaj zakładkę "Zarządzanie użytkownikami" *@
-                         @if (User.IsInRole("Administrator"))
+                        @* Zmieniono zakładkę na "Panel administratora" *@
+                        @if (User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ManageRoles">Zarządzanie użytkownikami</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="AdminPanel">Panel administratora</a>
                             </li>
-                         }
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
