--- a/PZ_Projekt/Views/Shared/_Layout.cshtml
+++ b/PZ_Projekt/Views/Shared/_Layout.cshtml
@@ -32,6 +32,13 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="AdminPanel">Panel administratora</a>
                             </li>
                         }
+                        @* Zakładka "Moje Zamówienia" *@
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="MyOrders">Moje Zamówienia</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
