--- a/PZ_Projekt/Views/Item/Details.cshtml
+++ b/PZ_Projekt/Views/Item/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    bool isAdmin = User.IsInRole("Administrator");
 }
 
 <h1>Details</h1>
@@ -51,7 +52,10 @@
     </form>
 </div>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+@if (isAdmin)
+{
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
+}
