--- a/PZ_Projekt/Views/Order/MyOrders.cshtml
+++ b/PZ_Projekt/Views/Order/MyOrders.cshtml
@@ -1,26 +1,26 @@
 ﻿@model IEnumerable<PZ_Projekt.Models.Order>
 
 @{
-    ViewData["Title"] = "My Orders";
+    ViewData["Title"] = "Moje Zamówienia";
 }
 
-<h1>My Orders</h1>
+<h1>Moje Zamówienia</h1>
 
 @if (!Model.Any())
 {
-    <p>You have no orders.</p>
+    <p>Nie masz żadnych zamówień.</p>
 }
 else
 {
     <table class="table">
         <thead>
             <tr>
-                <th>Order Date</th>
-                <th>Delivery Method</th>
-                <th>Address</th>
+                <th>Data zamówienia</th>
+                <th>Metoda dostawy</th>
+                <th>Adres</th>
                 <th>Status</th>
-                <th>Total</th>
-                <th>Details</th>
+                <th>Suma</th>
+                <th>Szczegóły</th>
             </tr>
         </thead>
         <tbody>
@@ -33,7 +33,7 @@ else
                     <td>@order.Status</td>
                     <td>@order.OrderItems.Sum(item => item.Quantity * item.Item.Price).ToString("C")</td>
                     <td>
-                        <a asp-controller="Order" asp-action="OrderConfirmation" asp-route-orderId="@order.Id" class="btn btn-info">Details</a>
+                        <a asp-controller="Order" asp-action="OrderConfirmation" asp-route-orderId="@order.Id" class="btn btn-info">Szczegóły</a>
                     </td>
                 </tr>
             }
