--- a/PZ_Projekt/Views/Admin/AdminPanel.cshtml
+++ b/PZ_Projekt/Views/Admin/AdminPanel.cshtml
@@ -2,42 +2,42 @@
 @inject UserManager<IdentityUser> UserManager
 @model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
 
-<h1>Administrator Panel</h1>
+<h1>Panel Administratora</h1>
 
 <div class="card-deck">
     <!-- Wyświetlanie wszystkich zamówień -->
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">All Orders</h5>
-            <p class="card-text">View all orders placed by users.</p>
-            <a href="@Url.Action("AllOrders", "Order")" class="btn btn-primary">View Orders</a>
+            <h5 class="card-title">Wszystkie Zamówienia</h5>
+            <p class="card-text">Przeglądaj wszystkie zamówienia złożone przez użytkowników.</p>
+            <a href="@Url.Action("AllOrders", "Order")" class="btn btn-primary">Przeglądaj Zamówienia</a>
         </div>
     </div>
 
     <!-- Zarządzanie użytkownikami -->
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Manage Users</h5>
-            <p class="card-text">Manage user roles and permissions.</p>
-            <a href="@Url.Action("ManageRoles", "Admin")" class="btn btn-primary">Manage Users</a>
+            <h5 class="card-title">Zarządzaj Użytkownikami</h5>
+            <p class="card-text">Zarządzaj rolami i uprawnieniami użytkowników.</p>
+            <a href="@Url.Action("ManageRoles", "Admin")" class="btn btn-primary">Zarządzaj Użytkownikami</a>
         </div>
     </div>
 
     <!-- Dodawanie produktów -->
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Add Product</h5>
-            <p class="card-text">Add new products to the store.</p>
-            <a href="@Url.Action("Create", "Item")" class="btn btn-primary">Add Product</a>
+            <h5 class="card-title">Dodaj Produkt</h5>
+            <p class="card-text">Dodaj nowe produkty do sklepu.</p>
+            <a href="@Url.Action("Create", "Item")" class="btn btn-primary">Dodaj Produkt</a>
         </div>
     </div>
 
     <!-- Lista wszystkich produktów -->
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">All Products</h5>
-            <p class="card-text">View all products in the store.</p>
-            <a href="@Url.Action("Index", "Item")" class="btn btn-primary">View Products</a>
+            <h5 class="card-title">Wszystkie Produkty</h5>
+            <p class="card-text">Przeglądaj wszystkie produkty w sklepie.</p>
+            <a href="@Url.Action("Index", "Item")" class="btn btn-primary">Przeglądaj Produkty</a>
         </div>
     </div>
 </div>
