--- a/PZ_Projekt/Views/Item/Create.cshtml
+++ b/PZ_Projekt/Views/Item/Create.cshtml
@@ -1,57 +1,57 @@
 ﻿@model PZ_Projekt.Models.Item
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Dodaj Produkt";
 }
 
-<h1>Create</h1>
+<h1>Dodaj Produkt</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Nazwa</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">Opis</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
+                <label asp-for="Price" class="control-label">Cena</label>
                 <input asp-for="Price" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
+                <label asp-for="Category" class="control-label">Kategoria</label>
                 <select asp-for="Category" class="form-control">
                     <option value="GPU">GPU</option>
                     <option value="CPU">CPU</option>
                     <option value="RAM">RAM</option>
-                    <option value="zasilacze">zasilacze</option>
-                    <option value="dysk">dysk</option>
-                    <option value="chłodzenie">chłodzenie</option>
+                    <option value="zasilacze">Zasilacze</option>
+                    <option value="dysk">Dysk</option>
+                    <option value="chłodzenie">Chłodzenie</option>
                 </select>
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageFile" class="control-label"></label>
+                <label asp-for="ImageFile" class="control-label">Zdjęcie</label>
                 <input asp-for="ImageFile" type="file" class="form-control" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Utwórz" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Powrót do Listy</a>
 </div>
 
 @section Scripts {
