--- a/PZ_Projekt/Views/Item/Delete.cshtml
+++ b/PZ_Projekt/Views/Item/Delete.cshtml
@@ -1,42 +1,42 @@
 ﻿@model PZ_Projekt.Models.Item
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Usuń";
 }
 
-<h1>Delete</h1>
+<h1>Usuń</h1>
 
-<h3>Are you sure you want to delete this item?</h3>
+<h3>Czy na pewno chcesz usunąć ten produkt?</h3>
 <div>
     @if (Model != null)
     {
         <dl class="row">
             <dt class="col-sm-2">
-                <strong>Name:</strong>
+                <strong>Nazwa:</strong>
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Name)
             </dd>
             <dt class="col-sm-2">
-                <strong>Description:</strong>
+                <strong>Opis:</strong>
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Description)
             </dd>
             <dt class="col-sm-2">
-                <strong>Price:</strong>
+                <strong>Cena:</strong>
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Price)
             </dd>
             <dt class="col-sm-2">
-                <strong>Category:</strong>
+                <strong>Kategoria:</strong>
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Category)
             </dd>
             <dt class="col-sm-2">
-                <strong>Image:</strong>
+                <strong>Zdjęcie:</strong>
             </dt>
             <dd class="col-sm-10">
                 <img src="@Model.ImageUrl" alt="@Model.Name" style="max-width: 200px; max-height: 200px;" />
@@ -45,12 +45,12 @@
 
         <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Usuń" class="btn btn-danger" /> |
+            <a asp-action="Index">Powrót do Listy</a>
         </form>
     }
     else
     {
-        <p>Item not found.</p>
+        <p>Produkt nie został znaleziony.</p>
     }
 </div>
