--- a/PZ_Projekt/Views/Item/Index.cshtml
+++ b/PZ_Projekt/Views/Item/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<PZ_Projekt.Models.Item>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista Produktów";
 }
 
-<h1>Index</h1>
+<h1>Lista Produktów</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Dodaj nowy</a>
 </p>
 <table class="table">
     <thead>
@@ -30,9 +30,9 @@
                 <td>@Html.DisplayFor(modelItem => item.Category)</td>
                 <td><img src="@item.ImageUrl" alt="@item.Name" style="max-width: 100px; max-height: 100px;" /></td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edytuj</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
                 </td>
             </tr>
         }
