--- a/PZ_Projekt/Views/Order/ConfirmRemoveOrder.cshtml
+++ b/PZ_Projekt/Views/Order/ConfirmRemoveOrder.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PZ_Projekt.Models.Order
 
-<h1>Confirm Remove Order</h1>
+<h1>Potwierdź usunięcie zamówienia</h1>
 
-<p>Are you sure you want to delete the order with ID: @Model.Id?</p>
+<p>Czy na pewno chcesz usunąć zamówienie o identyfikatorze: @Model.Id?</p>
 
 <form asp-action="ConfirmRemoveOrder" asp-route-id="@Model.Id" method="post">
-    <input type="submit" value="Confirm" class="btn btn-danger" />
-    <a asp-action="AllOrders" class="btn btn-secondary">Cancel</a>
+    <input type="submit" value="Potwierdź" class="btn btn-danger" />
+    <a asp-action="AllOrders" class="btn btn-secondary">Anuluj</a>
 </form>
