--- a/PZ_Projekt/Views/Order/Checkout.cshtml
+++ b/PZ_Projekt/Views/Order/Checkout.cshtml
@@ -12,22 +12,22 @@
     <div class="form-group">
         <label asp-for="DeliveryMethod">Metoda dostawy:</label>
         <select asp-for="DeliveryMethod" class="form-control">
+            <option value="">Wybierz metodę dostawy</option>
             <option value="Pickup">Odbiór w sklepie</option>
             <option value="Courier">Kurier za pobraniem</option>
         </select>
+        <span asp-validation-for="DeliveryMethod" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Address">Adres dostawy:</label>
         <input asp-for="Address" class="form-control" />
+        <span asp-validation-for="Address" class="text-danger"></span>
     </div>
 
-    <h3>Zamówione produkty:</h3>
-    <ul>
-        @foreach (var item in Model.OrderItems)
-        {
-            <li>@item.Item.Name - @item.Quantity x @item.Item.Price.ToString("C") = @(item.Quantity * item.Item.Price) zł</li>
-        }
-    </ul>
+  
+
+
 
     <button type="submit" class="btn btn-primary">Złóż zamówienie</button>
 </form>
