zmiana wyświetlania obrazków

--- a/PZ_Projekt/Views/Home/Products.cshtml
+++ b/PZ_Projekt/Views/Home/Products.cshtml
@@ -43,7 +43,7 @@
                 {
                     <div class="col-md-4">
                         <div class="card mb-3">
-                            <img class="card-img-top" src="@item.ImageUrl" alt="@item.Name">
+                            <img class="card-img-top" src="@item.ImageUrl" alt="@item.Name" style="max-height: 200px; object-fit: scale-down;" class="card-img-top">
                             <div class="card-body">
                                 <h5 class="card-title">@item.Name</h5>
                                 <p class="card-text">@item.Price.ToString("C")</p>
