--- a/PZ_Projekt/Views/Home/Index.cshtml
+++ b/PZ_Projekt/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 
 
 
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -16,7 +17,7 @@
                 {
                     <div class="col-md-4">
                         <div class="card mb-3">
-                            <img class="card-img-top" src="@item.ImageUrl" alt="@item.Name">
+                            <img class="card-img-top" src="@item.ImageUrl" alt="@item.Name" style="max-height: 200px; object-fit: scale-down;" class="card-img-top">
                             <div class="card-body">
                                 <h5 class="card-title">@item.Name</h5>
                                 <p class="card-text">@item.Price.ToString("C")</p>
