--- a/PZ_Projekt/Views/Item/Create.cshtml
+++ b/PZ_Projekt/Views/Item/Create.cshtml
@@ -12,17 +12,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Nazwa</label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" placeholder="Maksymalna liczba znaków: 70" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+                
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Opis</label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control" placeholder="Maksymalna liczba znaków: 1000" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label">Cena</label>
-                <input asp-for="Price" class="form-control" type="number" step="0.01" />
+                <input asp-for="Price" class="form-control" placeholder="Dostępny zakres 1-9999" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -39,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label">Zdjęcie</label>
-                <input asp-for="ImageFile" type="file" class="form-control" />
+                <input asp-for="ImageFile" type="file" class="form-control" accept="image/*" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
 
