zmiana tekstu przy robieniu zamówienia

--- a/PZ_Projekt/Views/Order/Checkout.cshtml
+++ b/PZ_Projekt/Views/Order/Checkout.cshtml
@@ -12,8 +12,8 @@
     <div class="form-group">
         <label asp-for="DeliveryMethod">Metoda dostawy:</label>
         <select asp-for="DeliveryMethod" class="form-control">
-            <option value="Pickup">Odbiór w sklepie</option>
-            <option value="Courier">Kurier za pobraniem</option>
+            <option value="Odbiór w sklepie">Odbiór w sklepie</option>
+            <option value="Kurier za pobraniem">Kurier za pobraniem</option>
         </select>
         <span asp-validation-for="DeliveryMethod" class="text-danger"></span>
     </div>
